--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
                     <aside class="site-sidebar">
                         <div class="wp-block-group">
                             <div>
+                                <div class="sidebar-profile-image" role="img" aria-label="Zezhen Wu"></div>
                                 <h2 class="wp-block-site-title"><a href="index.html">Zezhen Wu</a></h2>
                                 <p class="wp-block-site-tagline">Behavioral Scientist</p>
                                 
