--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                         <li class="current-menu-item"><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="publications.html">Publications</a></li>
-                                        <li><a href="assets/cv.pdf" target="_blank">CV</a></li>
+                                        <li><a href="cv.html">CV</a></li>
                                     </ul>
                                 </nav>
                             </div>
