--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <aside class="site-sidebar">
                         <div class="wp-block-group">
                             <div>
-                                <div class="sidebar-profile-image" role="img" aria-label="Zezhen Wu"></div>
+                                <a href="index.html"><div class="sidebar-profile-image" role="img" aria-label="Zezhen Wu"></div></a>
                                 
                                 <nav class="wp-block-navigation">
                                     <ul>
