--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
                             </div>
                             
                             <div class="wp-block-social-links">
-                                <li class="wp-social-link"><a href="https://www.linkedin.com/in/zezhenwu/" target="_blank" rel="noopener">LinkedIn</a></li>
+                                <li class="wp-social-link"><a href="https://www.linkedin.com/in/zezhenwu/" target="_blank" rel="noopener">
+                                    <svg style="width: 14px; height: 14px; vertical-align: middle; margin-right: 4px; fill: currentColor;" viewBox="0 0 24 24">
+                                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                                    </svg>
+                                    LinkedIn
+                                </a></li>
                                 <li class="wp-social-link"><a href="https://github.com/littlehifive" target="_blank" rel="noopener">GitHub</a></li>
                                 <li class="wp-social-link"><a href="https://medium.com/@wuzezhen33" target="_blank" rel="noopener">Blog</a></li>
                             </div>
@@ -114,11 +119,16 @@
                                     <h1>I'm <span style="background: linear-gradient(45deg, #4A90E2, #6B5B95, #2E5984, #5A67D8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Zezhen Wu</span>, a behavioral scientist working at the intersection of AI, data science, and social impact.</h1>
                                     
                                     <div class="wp-block-buttons">
-                                        <div class="wp-block-button">
-                                            <a class="wp-block-button__link" href="https://www.linkedin.com/in/zezhenwu/" target="_blank" rel="noopener">Ping me on LinkedIn</a>
+                                        <div class="wp-block-button linkedin-button">
+                                            <a class="wp-block-button__link" href="https://www.linkedin.com/in/zezhenwu/" target="_blank" rel="noopener">
+                                                <svg style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px; fill: currentColor;" viewBox="0 0 24 24">
+                                                    <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                                                </svg>
+                                                Ping me on LinkedIn
+                                            </a>
                                         </div>
                                         <div class="wp-block-button is-style-outline">
-                                            <a class="wp-block-button__link" href="https://medium.com/@wuzezhen33" target="_blank" rel="noopener">Read my blog</a>
+                                            <a class="wp-block-button__link" href="https://medium.com/@wuzezhen33" target="_blank" rel="noopener">Read my Medium blog</a>
                                         </div>
                                     </div>
                                 </div>
